<resources>
    <string name="app_name">Calculator</string>
    <string name="str_mr">MR</string>
    <string name="str_mc">MC</string>
    <string name="str_mplus">M+</string>
    <string name="str_mminus">M-</string>
    <string name="str_7">7</string>
    <string name="str_8">8</string>
    <string name="str_9">9</string>
    <string name="str_plus">+</string>
    <string name="str_4">4</string>
    <string name="str_5">5</string>
    <string name="str_6">6</string>
    <string name="str_minus">－</string>
    <string name="str_1">1</string>
    <string name="str_2">2</string>
    <string name="str_3">3</string>
    <string name="str_multiply">x</string>
    <string name="str_0">0</string>
    <string name="str_c">C</string>
    <string name="str_equals">=</string>
    <string name="str_division">÷</string>
</resources>
