<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="sky.com.calculator.MainActivity">

    <TextView
        android:id="@+id/tv_print"
        android:layout_width="match_parent"
        android:layout_height="@dimen/edit_height"
        android:background="@color/edit_background"
        android:textColor="@color/edit_text_color"
        android:text="0"
        android:singleLine="true"
        android:ellipsize="end"
        android:focusable="false"
        android:textSize="@dimen/edit_text_size"
        android:gravity="bottom|right"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/tv_print"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:weightSum="4">
            <Button
                android:id="@+id/btn_mr"
                style="@style/btn_number_style"
                android:text="@string/str_mr"/>
            <Button
                android:id="@+id/btn_mc"
                style="@style/btn_number_style"
                android:text="@string/str_mc"/>
            <Button
                android:id="@+id/btn_mplus"
                style="@style/btn_number_style"
                android:text="@string/str_mplus"/>
            <Button
                android:id="@+id/btn_mminus"
                style="@style/btn_number_style"
                android:text="@string/str_mminus"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:weightSum="4">
            <Button
                android:id="@+id/btn_7"
                style="@style/btn_number_style"
                android:text="@string/str_7"/>
            <Button
                android:id="@+id/btn_8"
                style="@style/btn_number_style"
                android:text="@string/str_8"/>
            <Button
                android:id="@+id/btn_9"
                style="@style/btn_number_style"
                android:text="@string/str_9"/>
            <Button
                android:id="@+id/btn_plus"
                style="@style/btn_operator_style"
                android:text="@string/str_plus"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:weightSum="4">
            <Button
                android:id="@+id/btn_4"
                style="@style/btn_number_style"
                android:text="@string/str_4"/>
            <Button
                android:id="@+id/btn_5"
                style="@style/btn_number_style"
                android:text="@string/str_5"/>
            <Button
                android:id="@+id/btn_6"
                style="@style/btn_number_style"
                android:text="@string/str_6"/>
            <Button
                android:id="@+id/btn_minus"
                style="@style/btn_operator_style"
                android:text="@string/str_minus"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:weightSum="4">
            <Button
                android:id="@+id/btn_1"
                style="@style/btn_number_style"
                android:text="@string/str_1"/>
            <Button
                android:id="@+id/btn_2"
                style="@style/btn_number_style"
                android:text="@string/str_2"/>
            <Button
                android:id="@+id/btn_3"
                style="@style/btn_number_style"
                android:text="@string/str_3"/>
            <Button
                android:id="@+id/btn_multiply"
                style="@style/btn_operator_style"
                android:text="@string/str_multiply"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:weightSum="4">
            <Button
                android:id="@+id/btn_0"
                style="@style/btn_number_bottom_style"
                android:text="@string/str_0"/>
            <Button
                android:id="@+id/btn_c"
                style="@style/btn_operator_bottom_style"
                android:text="@string/str_c"/>
            <Button
                android:id="@+id/btn_equals"
                style="@style/btn_operator_bottom_style"
                android:text="@string/str_equals"/>
            <Button
                android:id="@+id/btn_division"
                style="@style/btn_operator_bottom_style"
                android:text="@string/str_division"/>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
